--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@ function startRecognition() {
 };
 
   recognition.onend = function() {
-    recognition.stop();
+    //recognition.stop();
   };
 }
 
