--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <option value="hi-IN">Hindi</option>
     <option value="kn-IN">Kannada</option>
     <option value="mr-IN">Marathi</option>
-    <option value="te-IND">Telagu</option>
+    <option value="te-IND">Telugu</option>
     <option value="gu-IN">Gujarati</option>
   </select>
 </div>
@@ -139,7 +139,7 @@ function startRecognition() {
 };
 
   recognition.onend = function() {
-    //recognition.stop();
+    recognition.stop();
   };
 }
 
